--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,10 @@
     "noImplicitReturns": false,
     "rootDir": "src",
     "outDir": "build",
+    "types": [
+      "@total-typescript/ts-reset",
+      "@types/node",
+    ]
   },
   "include": [
     "src",
